# clice

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .sh  .txt  404.html  CMakeLists.txt  CMakePresets.json  CNAME  Dockerfile  README.md  build.html  clangd.md  clice.md  compile_commands.json  configuration.html  contribution.html  flake.nix  hashmap.json  index.html  index.sidx  main.cpp  pyproject.toml  test.cpp  xmake.lua
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml  build-llvm.yml  check-format.yml  cmake.yml  deploy.yml  docker.yml  nightly.yml  release.yml  xmake.yml
assets/: app.7KCFXIFk.js  app.CXd-mkMt.js  app.DwF6IAiX.js  build.md.BOV6IxMv.js  build.md.BOV6IxMv.lean.js  build.md.Co74jVci.js  build.md.Co74jVci.lean.js  configuration.md.CpRedDOQ.js  configuration.md.CpRedDOQ.lean.js  configuration.md.SZM31VTV.js  configuration.md.SZM31VTV.lean.js  contribution.md.D67pvD6S.js  contribution.md.Zb0EHW2I.lean.js  design_architecture.md.B1nOS2BF.js  design_architecture.md.B1nOS2BF.lean.js  design_architecture.md.C7gHe7F3.js  design_architecture.md.C7gHe7F3.lean.js  design_architecture.md.D8TKjkhM.js  design_architecture.md.D8TKjkhM.lean.js  design_architecture.md.DXjpIIDd.js  design_architecture.md.DXjpIIDd.lean.js  design_clangd.md.BI44VFCi.js  design_clangd.md.BI44VFCi.lean.js  design_clangd.md.Bf0uxymm.js  design_clangd.md.Bf0uxymm.lean.js  design_compilation.md.CCvAsCts.js  design_compilation.md.CCvAsCts.lean.js  design_compilation.md.DgqTpBDl.js  design_compilation.md.DgqTpBDl.lean.js  design_dependent-name.md.CB6lwa4v.js  design_dependent-name.md.CB6lwa4v.lean.js  design_dependent-name.md.CV61gbuX.js  design_dependent-name.md.CV61gbuX.lean.js  design_design.md.C2BgqDzh.js  design_design.md.C2BgqDzh.lean.js  design_design.md.Co380ABC.js  design_design.md.Co380ABC.lean.js  design_header-context.md.BxMpdImS.js  design_header-context.md.BxMpdImS.lean.js  design_header-context.md.D86T7s_L.js  (+179 more)
assets/chunks/: framework.CMh-eHm7.js  framework.D8webtH5.js  theme.Bcb8IYOc.js  theme.CkK9I6KQ.js  theme.rf236kCY.js
cmake/: github.cmake  llvm_setup.cmake  toolchain.cmake  utils.cmake  windows.cmake
config/: default-toolchain-version  llvm-binary  prebuilt-llvm.json
design/: architecture.html  clangd.html  compilation.html  dependent-name.html  design.html  header-context.html  index.html  markdown-examples.html  protocol.html  template-resolver.html
dev/: build.html  contribution.html  test-and-debug.html
docker/linux/: Dockerfile  build.sh  run.sh
docs/: SemanticTokens-example.cpp  architecture.md  build.md  clangd.md  clice.md  clice.toml  configuration.md  contribution.md  option.toml  package-lock.json  package.json  roadmap.md  semantic-tokens-example.cpp  setup.md
docs/.vitepress/: config.ts
docs/clang/: Preprocessor.md  README.md
docs/design/: architecture.md  design.md  protocol.md
docs/en/: build.md  configuration.md  index.md
docs/examples/: ASTVisitor.cpp  CodeCompletion.cpp  Module.cpp  Preamble.cpp  Preprocessor.cpp  TreeTransform.cpp
docs/feature/: document-symbol.md  folding-range.md  inlay-hint.md
docs/zh/: index.md
feature/: document-symbol.html  folding-range.html  inlay-hint.html  semantic-tokens.html
guide/: configuration.html  quick-start.html  what-is-clice.html
include/: index.fbs
include/AST/: Compiler.h  Context.h  Diagnostic.h  Directive.h  FilterASTVisitor.h  ParsedAST.h  Preamble.h  RelationKind.h  Resolver.h  Selection.h  Semantic.h  SourceCode.h  SourceLocation.h  SymbolID.h  SymbolKind.h  Utility.h
include/Async/: Async.h  Awaiter.h  Coroutine.h  Event.h  FileSystem.h  Gather.h  Lock.h  Net.h  Network.h  Scheduler.h  Sleep.h  Socket.h  Task.h  ThreadPool.h  UV.h  libuv.h
include/Basic/: Basic.h  Document.h  HeaderContext.h  Lifecycle.h  Location.h  Markdown.h  RelationKind.h  SourceCode.h  SourceConverter.h  SymbolKind.h  URI.h  Workspace.h
include/Clang/: Clang.h  CompileDatabase.h  Compiler.h  DependentShaper.h  Diagnostic.h  Diagnostics.h  Directive.h  ParsedAST.h  Preamble.h
include/Compiler/: AST.h  Clang.h  Command.h  Compilation.h  CompilationDatabase.h  CompilationUnit.h  Compiler.h  Dependency.h  Diagnostic.h  Directive.h  Module.h  ParsedAST.h  Preamble.h  Resolver.h  Selection.h  Semantic.h  SymbolKinds.h  Tidy.h  Utility.h
include/Feature/: CodeAction.h  CodeCompletion.h  CodeLens.h  Definition.h  Diagnostic.h  DocumentHighlight.h  DocumentLink.h  DocumentSymbol.h  FoldingRange.h  Formatting.h  Hover.h  InlayHint.h  InlayHint2.h  Lookup.h  SemanticToken.h  SemanticTokens.def  SemanticTokens.h  SignatureHelp.h
include/Index/: ArrayView.h  Binary.h  CSIF.h  Contexts.h  Contextual.h  Decode.h  FeatureIndex.h  HeaderIndex.h  IncludeGraph.h  Index.def  Index.h  Index.inl  Index2.h  Indexer.h  LazyArray.h  Loader.h  Memory.h  Pack.h  Packer.h  Protocol.h  RawIndex.h  Relation.h  Serialization.h  Serialize.h  Shared.h  Shared2.h  SharedIndex.h  SymbolCollector.h  SymbolID.h  SymbolIndex.h  SymbolSlab.h  Symbols.def  TUIndex.h  USR.h
include/LSP/: MessageBuffer.h  Protocol.h  Scheduler.h  SemanticTokens.h  Server.h  Setting.h  Transport.h
include/Protocol/: Basic.h  Capability.h  Document.h  Initialize.h  Lifecycle.h  Message.h  Notebook.h  Protocol.h  SemanticTokens.def  SemanticTokens.h  TextDocument.h  Workspace.h
include/Server/: Async.h  Async2.h  CDBWatcher.h  Cache.h  CacheManager.h  Command.h  (+23 more)
samples/: CMakeLists.txt  main.cpp
scripts/: build-dev-test.sh  build-dev.sh  build-full-llvm.sh  build-llvm-debug.py  build-llvm-debug.sh  build-llvm-dev.py  build-llvm-dev.sh  build-llvm-libs.py  build-llvm-release.py  build-llvm-release.sh  build-llvm-runtime.sh  build-llvm-thread.py  build-release.sh  build-runtime.sh  build.sh  calculate-line.sh  clone.sh  download-prebuilts.sh  fetch-clang-headers.lua  update-deps.py
src/: main.cpp
tests/: JSON.cpp  Resolver.cpp  Test.h  compile_commands.json  conftest.py  main.cpp  test.cpp
unittests/: Test.h  main.cpp
vscode-clice/: package-lock.json  package.json
zh/: index.html
(+450 files in other folders)
