[project]
name = "clice"
version = "0.1.0"
description = "Clice is a language server for C/C++/Objective-C/Objective-C++/C#"
readme = "README.md"
authors = [
    { name = "Clice Developers" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
markers = [
    "asyncio",
]
