[project]
name = "clice"
version = "0.1.0"
description = "clice is a language server for C/C++"
readme = "README.md"
authors = [
    { name = "clice developers" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
]

[tool.pytest.ini_options]
markers = [
    "asyncio",
]
